<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="android.view.View" />
        <variable
            name="handler"
            type="com.earth.angel.appphoto.fragment.PhotoFragment" />
    </data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:background="@color/white"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/ivEditPhoto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@mipmap/edit_photo" />

        <TextView
            android:visibility="gone"
            android:layout_marginTop="@dimen/_30sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Post_Eco_Gift"
            android:textColor="#ff3b3b3b"
            android:textSize="22sp"
            />
        <TextView
            android:id="@+id/tvUpload"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/text_Upload"
            android:textColor="#ff838383"
            android:textSize="14sp"
            />
        <TextView
            android:id="@+id/tvShape"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/_15sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/text_shape"
            android:textColor="#ff838383"
            android:textSize="14sp"
            />
      <LinearLayout
          android:layout_marginTop="@dimen/_20sdp"
          android:id="@+id/llPost"
          android:layout_marginLeft="@dimen/_30sdp"
          android:layout_marginRight="@dimen/_30sdp"
          android:padding="@dimen/_10sdp"
          android:gravity="center"
          android:background="@drawable/shape_corner_group_gift"
          android:orientation="horizontal"
          android:layout_width="match_parent"
          android:layout_height="wrap_content">
        <ImageView
            android:src="@mipmap/post_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"></ImageView>
          <TextView
              android:layout_marginLeft="@dimen/_10sdp"
              android:textColor="@color/white"
              android:textSize="16sp"
              android:text="@string/label_Post"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"></TextView>
      </LinearLayout>
        <LinearLayout
            android:layout_marginTop="@dimen/_20sdp"
            android:id="@+id/llShare"
            android:layout_marginLeft="@dimen/_30sdp"
            android:layout_marginRight="@dimen/_30sdp"
            android:padding="@dimen/_10sdp"
            android:gravity="center"
            android:background="@drawable/shape_corner_group_joined"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <ImageView
                android:src="@mipmap/post_share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></ImageView>
            <TextView
                android:layout_marginLeft="@dimen/_10sdp"
                android:textColor="@color/themColor"
                android:textSize="16sp"
                android:text="@string/label_Post_Share"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"></TextView>
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>