<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_marginLeft="@dimen/_20sdp"
        android:layout_marginRight="@dimen/_20sdp"
        android:paddingBottom="@dimen/_10sdp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/shape_corner_dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    <TextView
        android:paddingLeft="@dimen/_30sdp"
        android:paddingRight="@dimen/_30sdp"
        android:layout_marginTop="@dimen/_20sdp"
        style="@style/AppTheme.TextView"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:id="@+id/title_tv"
        android:gravity="center"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_dialog_contacts"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


        <TextView
            android:paddingLeft="@dimen/_15sdp"
            android:paddingRight="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_20sdp"
            style="@style/AppTheme.TextView"
            android:gravity="center"
            android:id="@+id/title_content"
            app:layout_constraintTop_toBottomOf="@+id/title_tv"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_dialog_contacts_detsil"
            android:textColor="#ff343434"
            android:textSize="16sp"
            />


    <Button
        android:textAllCaps="false"
        android:layout_marginTop="@dimen/_15sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginRight="@dimen/_5sdp"
        android:text="@string/lab_Cancel"
        android:background="@drawable/shape_corner_save"
        app:layout_constraintTop_toBottomOf="@+id/title_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btSaveShare"
        android:id="@+id/btReset"
        android:textSize="15sp"
        android:textColor="@color/themColor"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    <Button
        android:textAllCaps="false"

        android:layout_marginTop="@dimen/_15sdp"
        android:layout_marginLeft="@dimen/_5sdp"
        android:paddingTop="@dimen/_10sdp"
        android:paddingBottom="@dimen/_10sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:text="@string/lab_ok"
        android:textSize="15sp"
        app:layout_constraintTop_toBottomOf="@+id/title_content"
        app:layout_constraintStart_toEndOf="@+id/btReset"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/shape_corner_group_join"
        android:id="@+id/btSaveShare"
        android:textColor="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>